@@ -9,14 +9,28 @@
 #include "base/tu_file.h"
 #include "net/http_client.h"
 
-#define HTTP_PORT 80
+#define HTTP_TIMEOUT 10	// sec
+//#define USE_PROXY
 
 netfile::netfile(const char* c_url) :
 	m_position(0),
 	m_iface(NULL),
 	m_ns(NULL),
-	m_eof(false)
+	m_eof(false),
+	m_buf(NULL),
+	m_bufsize(0),
+	m_size(0)
 {
+	m_ci.m_port = 80;
+
+#ifdef USE_PROXY
+	m_ci.m_proxy = "192.168.1.201";
+	m_ci.m_proxy_port = 8080;
+#else
+	m_ci.m_proxy = "";
+	m_ci.m_proxy_port = 0;
+#endif
+
 	char* url = strdup(c_url);
 
 	// get host name from url
@@ -31,14 +45,19 @@ netfile::netfile(const char* c_url) :
 		return;
 	}
 
-	tu_string uri = url + i;
+	m_ci.m_uri = url + i;
 	url[i] = 0;
-	tu_string host = url;
+	m_ci.m_host = url;
 	free(url);
 	url = NULL;
 
+	// for debuging
+//	m_fd = fopen("c:\\xxx.swf", "rb");
+//	m_ns = (net_socket*)1;
+//	return;
+
 	// Open a socket to receive connections on.
-	m_iface = tu_create_net_interface_tcp(host, HTTP_PORT);
+	m_iface = tu_create_net_interface_tcp(&m_ci);
 	if (m_iface == NULL)
 	{
 		fprintf(stderr, "Couldn't open net interface\n");
@@ -47,11 +66,10 @@ netfile::netfile(const char* c_url) :
 
 	m_ns = m_iface->create_socket();
 
-	if (open_uri(host, uri) == false)
+	if (open_uri() == false)
 	{
 		close();
 	}
-
 }
 
 netfile::~netfile()
@@ -61,29 +79,53 @@ netfile::~netfile()
 
 void netfile::close()
 {
-	delete m_ns;
+//	delete m_ns;
 	m_ns = NULL;
 	delete m_iface;
 	m_iface = NULL;
+	free(m_buf);
+	m_buf = NULL;
+//	fclose(m_fd);
 }
 
 int netfile::http_read(void* dst, int bytes, void* appdata) 
 // Return the number of bytes actually read.  EOF or an error would
 // cause that to not be equal to "bytes".
 {
-	assert(appdata);
-	assert(dst);
 	netfile* nf = (netfile*) appdata;
+	return nf->read(dst, bytes);
+}
 
-	int n = 0;
-	if (nf->m_ns)
+int netfile::read(void* dst, int bytes) 
+{
+	assert(dst);
+
+	if (m_ns == NULL)
 	{
-		n = nf->m_ns->read(dst, bytes, 10);
-		nf->m_position += n;
+		return 0;
 	}
-	
-	nf->m_eof = n == bytes ? false : true;
 
+	// ensure buf
+	while (m_bufsize < m_position + bytes)
+	{
+		m_bufsize += 4096;
+		m_buf = (Uint8*) realloc(m_buf, m_bufsize);
+	}
+
+	// not enough data in the buffer
+	if (m_position + bytes > m_size)
+	{
+		int n = m_ns->read(m_buf + m_size, m_position + bytes - m_size, HTTP_TIMEOUT);
+//		int n = fread(m_buf + m_size, 1, m_position + bytes - m_size, m_fd);
+		m_size += n;
+	}
+
+	int n = imin(bytes, m_size - m_position);
+	memcpy(dst, m_buf + m_position, n);
+	m_position += n;
+	m_eof = n < bytes ? true : false;
+	
+//	printf("read %d %d %d\n", bytes, n, m_position);
 	return n;
 }
 
@@ -91,6 +133,7 @@ int netfile::http_tell(const void *appdata)
 {
 	assert(appdata);
 	netfile* nf = (netfile*) appdata;
+//	printf("tell %d\n", nf->m_position);
 	return nf->m_position;
 }
 
@@ -115,21 +158,35 @@ int netfile::http_write(const void* src, int bytes, void* appdata)
 int netfile::http_seek(int pos, void *appdata)
 // Return 0 on success, or TU_FILE_SEEK_ERROR on failure.
 {
-	assert(appdata);
 	netfile* nf = (netfile*) appdata;
+	return nf->seek(pos);
+}
 
-	if (nf->m_ns)
+int netfile::seek(int pos)
+// Return 0 on success, or TU_FILE_SEEK_ERROR on failure.
+{
+	if (m_ns == NULL)
 	{
-		int i;
+		return TU_FILE_SEEK_ERROR;
+	}
+
+	if (pos < m_position)
+	{
+		m_position = pos;
+		m_eof = false;
+	}
+	else
+	{
 		int n = 1;
-		for (i = nf->m_position; i < pos && n == 1; i++)
+		while (m_position < pos && n == 1)
 		{
 			Uint8 b;
-			n = nf->m_ns->read(&b, 1, 1);
+			n = read(&b, 1);
 		}
-		nf->m_position = i;
+
 	}
-	return nf->m_position == pos ? 0 : TU_FILE_SEEK_ERROR;
+	//	printf("seek %d %d\n", pos, nf->m_position);
+	return m_position == pos ? TU_FILE_NO_ERROR : TU_FILE_SEEK_ERROR;
 }
 
 int netfile::http_seek_to_end(void *appdata)
@@ -144,7 +201,6 @@ int netfile::http_seek_to_end(void *appdata)
 		n = http_read(&b, 1, appdata);
 	}
 	while (n == 1);
-
 	return 0;
 }
 
@@ -156,32 +212,17 @@ bool netfile::http_get_eof(void *appdata)
 	return nf->m_eof;
 }
 
-
-bool netfile::open_uri(const tu_string& host_name, const tu_string& resource)
+// read http response
+bool netfile::read_response()
 {
-	assert(m_ns);
-
-//			m_ns->write_string("CONNECT xxx.com HTTP/1.1\r\n		// if proxy is used 
-	m_ns->write_string(tu_string("GET ") + resource + tu_string(" HTTP/1.1\r\n"), 1);
-	m_ns->write_string(tu_string("Host:") + host_name + tu_string("\r\n"), 1);
-	//		m_ns->write_string("Accept:*/*\r\n", 1);
-	//		m_ns->write_string("Accept-Language: en\r\n", 1);
-	//		m_ns->write_string("Accept-Encoding: gzip, deflate, chunked\r\n", 1);
-	//		m_ns->write_string("Accept-Encoding: *\r\n", 1);
-	m_ns->write_string("User-Agent:gameswf\r\n", 1);
-	m_ns->write_string("Connection:Close\r\n", 1);
-	m_ns->write_string("\r\n", 1);
-
-	bool retcode = false;
-
-	// read headers
+	bool rc = false;
 	while (true)
 	{
 		tu_string s;
-		int n = m_ns->read_line(&s, 100, 10);
+		int n = m_ns->read_line(&s, 100, HTTP_TIMEOUT);
 
 		// end of header
-		if (n == 0 || n == 2)
+		if (n <= 2)
 		{
 			break;
 		}
@@ -193,11 +234,48 @@ bool netfile::open_uri(const tu_string& host_name, const tu_string& resource)
 		{
 			if (strncmp(s.c_str() + 9, "200", 3) == 0)
 			{
-				retcode = true;
+				rc = true;
 			}
 		}
 	}
-	return retcode;
+	return rc;
+}
+
+bool netfile::open_uri()
+{
+	assert(m_ns);
+
+//	for debuging
+// http://tu-testbed.svn.sourceforge.net/viewvc/*checkout*/tu-testbed/trunk/tu-testbed/gameswf/samples/video.swf?revision=891
+// http://www.olm.co.jp/swf/main.swf 
+// http://cvs.savannah.gnu.org/viewcvs/gnash/testsuite/movies.all/gravity.swf?rev=1.2&root=gnash&view=auto
+
+	if (m_ci.m_proxy_port > 0)
+	{
+		char buf[80];
+		sprintf(buf, "CONNECT %s:%d HTTP/1.0\r\n", m_ci.m_host.c_str(), m_ci.m_port);
+		m_ns->write_string(buf, 1);
+		m_ns->write_string("User-Agent:gameswf\r\n", 1);
+		m_ns->write_string("Connection:Keep-Alive\r\n", 1);
+		m_ns->write_string("\r\n", 1);
+		if (read_response() == false)
+		{
+			return false;
+		}
+	}
+
+	// We use HTTP/1.0 because we do not wont get chunked encoding data
+	m_ns->write_string(tu_string("GET ") + m_ci.m_uri + tu_string(" HTTP/1.0\r\n"), 1);
+	m_ns->write_string(tu_string("Host:") + m_ci.m_host + tu_string("\r\n"), 1);
+//	m_ns->write_string("Accept:*\r\n", 1);
+//	m_ns->write_string("Accept-Language: en\r\n", 1);
+//	m_ns->write_string("Accept-Encoding: gzip, deflate, chunked\r\n", 1);
+//	m_ns->write_string("Accept-Encoding: *\r\n", 1);
+	m_ns->write_string("User-Agent:gameswf\r\n", 1);
+	m_ns->write_string("Connection:Close\r\n", 1);
+	m_ns->write_string("\r\n", 1);
+ 
+	return read_response();
 }
 
 // Local Variables:
