@@ -1,3 +1,11 @@
+2007-04-03  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/gameswf_test_ogl.cpp: s_total_tags is commented out
+	to not read two times *.swf from network
+	* net/http_client.*,
+	* net/net_inetrface_tcp.cpp,
+	* net/net_interface.h: Stabilization of http-tu_file
+
 2007-04-01  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* net/http_client.*: fixed eof()
